# multi-llm-orchestrator

./: .dockerignore  .env_old.txt  .gitignore  .pre-commit-config.yaml  ADVERSARIAL_STRESS_TEST_AND_OPTIMIZATION_ANALYSIS.md  ADVERSARIAL_STRESS_TEST_REPORT.md  ADVERSARIAL_STRESS_TEST_SUMMARY.md  ADVERSARY_ROUND1_FINDINGS.md  ADVERSARY_ROUND2_FINDINGS.md  AGENTS.md  ALL_ENHANCEMENTS_COMPLETE.md  API_KEYS_REFERENCE.md  APP_STORE_VALIDATOR_GUIDE.md  ARA_MODEL_SELECTION_GUIDE.md  ARA_OPENROUTER_OPTIMAL_MODELS.md  ARA_PHASE_AWARE_COMPLETE.md  ARA_PHASE_AWARE_MODELS.md  ARA_PHASE_AWARE_STATUS.md  ARA_PHASE_AWARE_V3_COMPLETE.md  ARA_PHASE_MODEL_ANALYSIS.md  ARA_PIPELINES_PHASE_UPDATES.md  ARA_PIPELINE_GUIDE.md  ARCHITECTURE_BUGFIXES_v2.md  ARCHITECTURE_CORE_VS_PLUGINS.md  ARCHITECTURE_FIXES_SUMMARY.md  ARCHITECTURE_IMPROVEMENTS_QUICKREF.md  ARCHITECTURE_RULES.md  BUGFIXES_2026_03_30.md  BUGFIX_VALIDATION_RESULT.md  BUG_REPORT_DEFERRED_FIXES.json  BUG_REPORT_FINAL.json  BUG_REPORT_OPTIMIZATIONS_FINAL.json  BUG_REPORT_PARADIGM_SHIFTS_FINAL.md  CACHE_OPTIMIZATION_SUMMARY.md  CAPABILITIES.md  CAPABILITIES.md.bak  CLAUDE.md  CLAUDE_INTEGRATION_SUMMARY.md  COMMAND_CENTER_IMPLEMENTATION.md  COMMIT_SUMMARY.txt  (+209 more)
.claude/: settings.local.json
.federated_learning/: global_cache.json
.feedback/: performance_records.json
.qwen/: settings.json
UI/: dashboard.jsx  dashboart.md  orchestrator-ide.jsx
Useful Github Projects/mnemo-cortex-master/: CONTRIBUTING.md  Dockerfile  README.md  agentb.yaml.example  cache.py  cli.py  config.py  install.sh  providers.py  pyproject.toml  server.py  sessions.py  test_agentb.py
Useful Github Projects/mnemo-cortex-master/adapters/openclaw/: SKILL-MNEMO-LIVEWIRE.md
Useful Github Projects/mnemo-cortex-master/adapters/openclaw/mnemo-ingest/: HOOK.md  handler.ts
Useful Github Projects/mnemo-cortex-master/agentb/: watcher.py
archives/: AI_Orchestrator_Implementation_Guide.md  FINAL_PROJECT_STATUS.md  GROK_MODELS_ANALYSIS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_MASTER_PLAN.md  NEXUS_SEARCH_OPTIMIZATION_ANALYSIS.md  PROJECT_COMPLETION_REPORT.md  PROJECT_HANDOVER_AUDIT.md  PROJECT_SHUTDOWN_AUDIT_SUMMARY.md  PROJECT_TRACKING_BOARD.md  RELEASE_NOTES_v1.0.0.md  WEEK1_DAY3_STANDUP.md  WEEK2_STANDUP.md  WEEK3_STANDUP.md  WEEK4_STANDUP.md  WEEK5_STANDUP.md  WEEK6_STANDUP.md  WEEKLY_SCHEDULE_8WEEKS.md  test_results.txt  🚀_COMMIT_AND_PUSH.md
docs/: ADVERSARIAL_STRESS_TEST.md  ANT_DESIGN_DASHBOARD.md  ARCHITECTURAL_AUDIT_V5.md  ARCHITECTURAL_FIX_PLAN.md  ARCHITECTURE_IMPROVEMENTS.md  ARCHITECTURE_OPTIMIZATION_CHANGELOG.md  ARCHITECTURE_ROADMAP.md  BUG001_FIX_ANALYSIS_AND_IMPLEMENTATION.md  BUG001_FIX_EXECUTIVE_SUMMARY.md  CAPABILITY_LOGGING.md  CODEBASE_MINDMAP.md  DASHBOARD.md  DEBUGGING_GUIDE.md  DEBUGGING_OVERVIEW.md  ENHANCED_DASHBOARD.md  GAP_ANALYSIS.md  INDESIGN_PLUGIN_RULES.md  ISSUE_TRACKING.md  LEGACY_CLEANUP_PLAN.md  LIVE_DASHBOARD.md  META_OPTIMIZATION.md  META_OPTIMIZATION_COMPLETE.md  META_OPTIMIZATION_V2.md  MIGRATION_GUIDE_v6.md  MIGRATION_v5_to_v6.md  NASH_STABILITY_INFRASTRUCTURE.md  OPTIMIZATIONS_APPLIED.md  OPTIMIZATION_SETUP_GUIDE.md  OPTIMIZATION_SUMMARY.md  OUTPUT_ORGANIZER.md  PLUGIN_DEVELOPMENT.md  PLUGIN_RULES_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  RELIABILITY_ANALYSIS_FINAL.md  RELIABILITY_FIX_FINAL_REPORT.md  SWIFTSTACK_FEATURES.md  WORDPRESS_PLUGIN_RULES.md  fix_github_username.py
examples/: example_capability_logging.py  example_deepseek_coder.py  example_enhanced_dashboard.py  example_indesign_plugin_rules.py  example_issue_tracking.py  example_project_spec.yaml  example_slack_integration.py  example_wordpress_plugin_rules.py
ide_frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
nexus_config/: settings.yml
orchestrator/: COMMAND_CENTER_README.md  CommandCenter.css  CommandCenter.html  __init__.py  __main__.py  a2a_protocol.py  ab_testing.py  accountability.py  adaptive_router.py  adaptive_templates.py  advanced_query_processing.py  agent_safety.py  agents.py  aggregator.py  analyzer.py  api_builder.py  api_clients.py  api_server.py  app_assembler.py  app_builder.py  app_detector.py  app_store_assets.py  app_store_validator.py  app_verifier.py  ara_integration.py  ara_pipelines.py  architecture_advisor.py  architecture_rules.py  architecture_rules_fixed.py  assembler.py  async_event_store.py  async_file_io.py  audit.py  autonomy.py  benchmark_suite.py  bm25_search.py  brain.py  browser_testing.py  budget.py  cache.py  (+215 more)
orchestrator_plugins/: __init__.py
projects/: TDD.yaml  ai_mydata_invoice_intelligence.yaml  analysis_greek_airbnb.yaml  analysis_greek_elections.yaml  analysis_greek_real_estate.yaml  analysis_netflix_spotify_youtube.yaml  autonomous_knowledge_worker.yaml  backend_graphql_api.yaml  backend_microservices.yaml  backend_rest_api.yaml  backend_task_queue.yaml  backend_websocket_chat.yaml  example_full.yaml  example_simple.yaml  frontend_nextjs_ecommerce.yaml  frontend_react_dashboard.yaml  frontend_react_dashboard_(production-grade).yaml  frontend_react_realtime.yaml  frontend_svelte_portfolio.yaml  frontend_vue_kanban.yaml  hyperagent_website_factory.yaml  polytonic_ocr.yaml  polytonic_ocr_fixed.yaml  portfolio_frontend_designer.yaml  portfolio_frontend_developer.yaml  portfolio_python_developer.yaml  portfolio_web_designer.yaml  portfolio_web_developer.yaml  rag_document_assistant.yaml  recommendation_engine.yaml  symplectic_engine.yaml  test_simple.yaml  website_technodj_advanced.yaml  website_technodj_advanced_high_end.yaml  website_technodj_advanced_high_end_awwards.yaml  website_technodj_webgl.yaml
refactoring/: ENGINE_DECOMPOSITION_PLAN.md  PLUGIN_ARCHITECTURE_GUIDE.md  TYPE_SAFETY_IMPROVEMENTS.md
simulations/: simulate_all.py
tests/: __init__.py  check_frontend.py  check_outputs.py  check_state.py  conftest.py  delete_old_dashboards.py  delete_temp_files.py  diagnose.py  do_move.py  execute_move.py  move_tests.py  orchestrator_compat_layer.py  reorganize_root.py  run_move.py  run_test.py  scan_d.py  setup_v6_optimizations.py  stress_test.py  test_agents.py  (+200 more)
(+292 files in other folders)
