[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "multi-llm-orchestrator"
dynamic = ["version"]
description = "Local multi-LLM orchestrator for autonomous project completion"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Georgios-Chrysovalantis Chatzivantsidis"},
]
keywords = ["llm", "orchestration", "automation", "ai", "multi-model"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.30",
    "google-genai>=1.0",
    "aiosqlite>=0.19",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typing-extensions>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "pytest-xdist>=3.3",
    "black>=23.7",
    "ruff>=0.1.0",
    "mypy>=1.5",
    "pre-commit>=3.4",
    "types-requests>=2.31",
    "types-aiofiles>=23.0",
]
security = [
    "bandit[toml]>=1.7.0",
    "safety>=2.3.0",
]
tracing = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]
dashboard = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "websockets>=11.0",
    "httpx>=0.24.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.2.0",
    "mkdocstrings[python]>=0.22.0",
]

[project.scripts]
orchestrator = "orchestrator.cli:main"
mllm = "orchestrator.cli:main"
dashboard = "orchestrator.cli_dashboard:main"

[project.urls]
Homepage = "https://github.com/gchatz22/multi-llm-orchestrator"
Repository = "https://github.com/gchatz22/multi-llm-orchestrator"
Documentation = "https://github.com/gchatz22/multi-llm-orchestrator/blob/main/README.md"
Issues = "https://github.com/gchatz22/multi-llm-orchestrator/issues"

[tool.hatch.version]
path = "orchestrator/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]

# ═══════════════════════════════════════════════════════════════════════════════
# Black - Code Formatting
# ═══════════════════════════════════════════════════════════════════════════════
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# ═══════════════════════════════════════════════════════════════════════════════
# Ruff - Fast Python Linter
# ═══════════════════════════════════════════════════════════════════════════════
[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "I",    # isort
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
]
ignore = [
    "E501",   # Line too long (handled by black)
    "B008",   # Do not perform function calls in argument defaults
    "SIM105", # Use contextlib.suppress
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.mccabe]
max-complexity = 15

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
known-first-party = ["orchestrator"]

# ═══════════════════════════════════════════════════════════════════════════════
# MyPy - Static Type Checking
# ═══════════════════════════════════════════════════════════════════════════════
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
exclude = [
    "tests/",
    "docs/",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "orchestrator._vendor.*"
ignore_errors = true

# ═══════════════════════════════════════════════════════════════════════════════
# Pytest - Testing Framework
# ═══════════════════════════════════════════════════════════════════════════════
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=orchestrator",
    "--cov-report=term-missing",
    "--cov-report=html:coverage_html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "requires_api: marks tests that require API keys",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
asyncio_mode = "auto"

# ═══════════════════════════════════════════════════════════════════════════════
# Coverage - Code Coverage Reporting
# ═══════════════════════════════════════════════════════════════════════════════
[tool.coverage.run]
source = ["orchestrator"]
omit = [
    "*/tests/*",
    "*/test_*",
    "orchestrator/__main__.py",
    "orchestrator/_vendor/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "typing.TYPE_CHECKING",
]
fail_under = 70
precision = 2

[tool.coverage.html]
directory = "coverage_html"

# ═══════════════════════════════════════════════════════════════════════════════
# Bandit - Security Linting
# ═══════════════════════════════════════════════════════════════════════════════
[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101"]  # Skip assert_used warnings in non-test code

# ═══════════════════════════════════════════════════════════════════════════════
# Semantic Versioning
# ═══════════════════════════════════════════════════════════════════════════════
[tool.bumpversion]
current_version = "1.2.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "orchestrator/__init__.py"
