[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "multi-llm-orchestrator"
dynamic = ["version"]
description = "Local multi-LLM orchestrator for autonomous project completion"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Georgios-Chrysovalantis Chatzivantsidis"},
]
keywords = ["llm", "orchestration", "automation", "ai", "multi-model"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.30,<2.0",
    "google-genai>=1.0,<2.0",
    "aiosqlite>=0.19,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "typing-extensions>=4.0,<5.0",
    "python-dotenv>=1.0.0,<2.0",
    "playwright>=1.40.0,<2.0.0",
    "newspaper3k>=0.2.8,<1.0",
    "json5>=0.9.0,<1.0",  # P2-1: Robust JSON parsing for LLM outputs
    "httpx>=0.24.0,<0.28.0",  # Compatibility with openai client
    "aiohttp>=3.9.0,<4.0",  # Used by a2a_protocol, rate_limiter, openrouter_sync
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=4.1,<5.0",
    "pytest-asyncio>=0.21,<1.0",
    "pytest-xdist>=3.3,<4.0",
    "black>=23.7,<25.0",
    "ruff>=0.1.0,<1.0",
    "mypy>=1.5,<2.0",
    "pre-commit>=3.4,<4.0",
    "types-requests>=2.31,<3.0",
    "types-aiofiles>=23.0,<25.0",
]
security = [
    "bandit[toml]>=1.7.0,<2.0",
    "safety>=2.3.0,<3.0",
]
tracing = [
    "opentelemetry-api>=1.20,<2.0",
    "opentelemetry-sdk>=1.20,<2.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20,<2.0",
]
dashboard = [
    "fastapi>=0.100.0,<1.0",
    "uvicorn[standard]>=0.23.0,<1.0",
    "websockets>=11.0,<13.0",
    "httpx>=0.24.0,<1.0",
]
docs = [
    "mkdocs>=1.5.0,<2.0",
    "mkdocs-material>=9.2.0,<10.0",
    "mkdocstrings[python]>=0.22.0,<1.0",
]

[project.scripts]
orchestrator = "orchestrator.cli:main"
mllm = "orchestrator.cli:main"
dashboard = "orchestrator.cli_dashboard:main"

[project.urls]
Homepage = "https://github.com/gchatz22/multi-llm-orchestrator"
Repository = "https://github.com/gchatz22/multi-llm-orchestrator"
Documentation = "https://github.com/gchatz22/multi-llm-orchestrator/blob/main/README.md"
Issues = "https://github.com/gchatz22/multi-llm-orchestrator/issues"

[tool.hatch.version]
path = "orchestrator/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]

# ═══════════════════════════════════════════════════════════════════════════════
# Black - Code Formatting
# ═══════════════════════════════════════════════════════════════════════════════
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# ═══════════════════════════════════════════════════════════════════════════════
# Ruff - Fast Python Linter
# ═══════════════════════════════════════════════════════════════════════════════
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "I",    # isort
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
]
ignore = [
    "E501",   # Line too long (handled by black)
    "B008",   # Do not perform function calls in argument defaults
    "B904",   # raise without from within except (pervasive, pre-existing)
    "SIM105", # Use contextlib.suppress
    # ── Pre-existing baseline violations (codebase never linted before) ────────
    "F401",   # Unused imports — 645 pre-existing instances
    "F811",   # Redefinition of unused name — 28 pre-existing instances
    "F821",   # Undefined name — 79 pre-existing instances (forward refs, TYPE_CHECKING)
    "F841",   # Local variable assigned but never used — 46 pre-existing instances
    "F541",   # f-string without placeholders — 40 pre-existing instances
    "I001",   # Import order — 219 pre-existing instances
    "E402",   # Module-level import not at top — 73 pre-existing instances
    "E712",   # Comparison to True/False — 25 pre-existing instances
    "E722",   # Bare except — 7 pre-existing instances
    "E741",   # Ambiguous variable name — 19 pre-existing instances
    "B007",   # Loop variable not used — 27 pre-existing instances
    "B023",   # Function definition in loop — 10 pre-existing instances
    "B026",   # Star-arg after keyword arg — 3 pre-existing instances
    "B027",   # Method in abstract class — 6 pre-existing instances
    "C416",   # Unnecessary list comprehension — 2 pre-existing instances
    "C420",   # Unnecessary dict comprehension — 8 pre-existing instances
    "W291",   # Trailing whitespace — 2 pre-existing instances
    "W293",   # Blank line contains whitespace — 5 pre-existing instances
    "B009",   # Do not call getattr with constant attribute — pre-existing
    "B011",   # Do not assert False — pre-existing
    "B017",   # pytest.raises without match — pre-existing
    "B018",   # Useless expression — pre-existing
    "B024",   # Abstract class without abstract methods — pre-existing
    "B025",   # Duplicate try-except block — pre-existing
    "B905",   # zip without strict= — pre-existing
    "C401",   # Unnecessary generator in set() call — pre-existing
    "F823",   # Local variable may be undefined — pre-existing
    "W605",   # Invalid escape sequence — pre-existing
    "SIM102", # Nested if statements — pre-existing (51 instances)
    "SIM103", # Return negated condition — pre-existing
    "SIM108", # Ternary operator — pre-existing
    "SIM113", # Use enumerate() — pre-existing
    "SIM115", # Context manager for open() — pre-existing
    "SIM117", # Nested with statements — pre-existing (26 instances)
    "TC001",  # Move import to TYPE_CHECKING — pre-existing
    "TC003",  # Move import to TYPE_CHECKING — pre-existing
    "TID252", # Prefer absolute over relative imports — pre-existing (51 instances)
    "UP006",  # Use dict/list instead of Dict/List — pre-existing
    "UP015",  # open() mode parameter — pre-existing
    "UP035",  # typing.Dict/List deprecated — pre-existing (18 instances)
    "UP037",  # Remove quotes from type annotation — pre-existing
    "UP045",  # Use X | None for type annotations — pre-existing (18 instances)
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["orchestrator"]

# ═══════════════════════════════════════════════════════════════════════════════
# MyPy - Static Type Checking
# ═══════════════════════════════════════════════════════════════════════════════
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
exclude = [
    "tests/",
    "docs/",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "orchestrator._vendor.*"
ignore_errors = true

# ── Legacy modules with pre-existing violations ────────────────────────────
# New code must NOT be added to this list. Remove entries as they are cleaned up.
[[tool.mypy.overrides]]
module = [
    "orchestrator.engine",
    "orchestrator.dashboard_mission_control",
    "orchestrator.ide_backend.ide_orchestrator_server",
    "orchestrator.ara_pipelines",
    "orchestrator.project_assembler",
    "orchestrator.cli",
    "orchestrator.multi_platform_generator",
    "orchestrator.test_first_generator",
    "orchestrator.issue_tracking",
    "orchestrator.dashboard_enhanced",
    "orchestrator.architecture_rules",
    "orchestrator.frontend_rules",
    "orchestrator.nash_infrastructure_v2",
    "orchestrator.dashboard_live",
    "orchestrator.indesign_plugin_rules",
    "orchestrator.frontend_security",
    "orchestrator.ab_testing",
    "orchestrator.adaptive_templates",
    "orchestrator.app_store_validator",
    "orchestrator.security_templates",
    "orchestrator.output_organizer",
    "orchestrator.output_writer",
    "orchestrator.component_library",
    "orchestrator.knowledge_graph",
    "orchestrator.quality_control",
    "orchestrator.sagas",
    "orchestrator.project_analyzer",
    "orchestrator.native_features",
    "orchestrator.a2a_protocol",
]
ignore_errors = true

# ═══════════════════════════════════════════════════════════════════════════════
# Pytest - Testing Framework
# ═══════════════════════════════════════════════════════════════════════════════
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Ignore debug scripts that have sys.exit(1) at module level
# or manipulate __builtins__ (trace/debug scripts)
# or have import errors (missing classes/constants)
# or have fixture errors (non-existent pytest fixtures)
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=orchestrator",
    "--cov-report=term-missing",
    "--cov-report=html:coverage_html",
    "--ignore=tests/test_api.py",
    "--ignore=tests/test_assembler_debug.py",
    "--ignore=tests/test_assembler_import.py",
    "--ignore=tests/test_basic_imports.py",
    "--ignore=tests/test_bug_fixes_critical_batch1.py",
    "--ignore=tests/test_cli_debug.py",
    "--ignore=tests/test_circular_trace.py",
    "--ignore=tests/test_direct_module_import.py",
    "--ignore=tests/test_e2e_comprehensive.py",
    "--ignore=tests/test_git_integration.py",
    "--ignore=tests/test_importlib.py",
    "--ignore=tests/test_mission_control.py",
    "--ignore=tests/test_mission_control_real.py",
    "--ignore=tests/test_normal_import.py",
    "--ignore=tests/test_performance_import.py",
    "--ignore=tests/test_project.py",
    "--ignore=tests/test_quick.py",
    "--ignore=tests/test_startup.py",
    "--ignore=tests/test_syntax.py",
    "--ignore=tests/test_trace_detailed.py",
    "--ignore=tests/test_v65_fix.py",
    "--ignore=tests/verify_frontend.py",
    "--ignore=tests/verify_syntax.py",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "requires_api: marks tests that require API keys",
    "load: marks tests as load tests",
    "stress: marks tests as stress tests",
    "benchmark: marks tests as benchmark tests",
    "e2e: marks tests as end-to-end tests",
    "mock: marks tests that use mocked dependencies",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
asyncio_mode = "auto"

# ═══════════════════════════════════════════════════════════════════════════════
# Coverage - Code Coverage Reporting
# ═══════════════════════════════════════════════════════════════════════════════
[tool.coverage.run]
source = ["orchestrator"]
omit = [
    "*/tests/*",
    "*/test_*",
    "orchestrator/__main__.py",
    "orchestrator/_vendor/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "typing.TYPE_CHECKING",
]
fail_under = 13  # ratchet: current baseline; raise as more tests are added (target: 50)
precision = 2

[tool.coverage.html]
directory = "coverage_html"

# ═══════════════════════════════════════════════════════════════════════════════
# Bandit - Security Linting
# ═══════════════════════════════════════════════════════════════════════════════
[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101"]  # Skip assert_used warnings in non-test code

# ═══════════════════════════════════════════════════════════════════════════════
# Semantic Versioning
# ═══════════════════════════════════════════════════════════════════════════════
[tool.bumpversion]
current_version = "1.2.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "orchestrator/__init__.py"
